Simple Changes and Additions
Added few things, removed few things and changed few things

--- a/CougarOS/CougarOS.csproj
+++ b/CougarOS/CougarOS.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Apps.lf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="cos_user.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
