--- a/cos-api-files/cos-api-files.csproj
+++ b/cos-api-files/cos-api-files.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A87D20C-8A9F-44BD-A2C4-4DA7BC95CD63}</ProjectGuid>
+    <ProjectGuid>{F31D5ECC-163C-4D9A-A850-97A616C816B0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>cos_apps</RootNamespace>
-    <AssemblyName>cos-apps</AssemblyName>
+    <RootNamespace>cos_api_files</RootNamespace>
+    <AssemblyName>cos-api-files</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,15 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calculator.cs" />
-    <Compile Include="Help.cs" />
+    <Compile Include="Browser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\cos-languages\cos-languages.csproj">
-      <Project>{deff61fb-d4aa-4485-8130-0406abb7cc5d}</Project>
-      <Name>cos-languages</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
