--- a/cos-languages/cos-languages.csproj
+++ b/cos-languages/cos-languages.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Czech.cs" />
     <Compile Include="English.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Translator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
