--- a/cos-apps/cos-apps.csproj
+++ b/cos-apps/cos-apps.csproj
@@ -43,11 +43,13 @@
   <ItemGroup>
     <Compile Include="About.cs" />
     <Compile Include="Calculator.cs" />
+    <Compile Include="Cat.cs" />
     <Compile Include="Clock.cs" />
     <Compile Include="Help.cs" />
     <Compile Include="Notepad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBrowser.cs" />
+    <Compile Include="Yes.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cos-api-config\cos-api-config.csproj">
